--- a/authentication/src/main/resources/application.yml
+++ b/authentication/src/main/resources/application.yml
@@ -1,16 +1,12 @@
 
-server:
-  port: 8083
-  servlet:
-    context-path: /auth
 
 spring:
   application:
     name: auth
   jpa:
-    show-sql: false
+    show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
       dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -19,14 +15,14 @@ spring:
     enable: false
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/auth
+    url: jdbc:postgresql://localhost:5433/auth
     username: postgres
     password: 123456
 
 security:
   jwt:
     token:
-      security-key: chave_microservico
+      security-key: VGhpcyBpcyBhIHZlcnkgc2VjdXJlIHNlY3JldCBmb3IgdGVzdA==
       expire-length: 360000
 
 eureka:
@@ -34,4 +30,8 @@ eureka:
     hostname: localhost
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/registry/eureka/
+      defaultZone: http://localhost:8761/eureka/
+server:
+  port: 8088
+  servlet:
+    context-path: /auth
